--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -119,8 +119,7 @@
   <ng-template pTemplate="body" let-timestamp >
     
     <tr class="unreadTimestamp" [ngClass]="{'obsoleteTimestamp': timestamp.isLatestInCycle == false}">
-      <td pTooltip="Event ID: {{timestamp.id}}
-        Publisher: {{timestamp.publisher}}
+      <td pTooltip="Publisher: {{timestamp.publisher.partyName}}
         PublisherRole: {{timestamp.publisherRole}}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" style="width: 3px;"
           [ngStyle]="{'background-color': timestamp.sequenceColor}"></td>
