Fix jittery mouse cursor when hovering over refresh buttons

--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -16,13 +16,13 @@
         <div class="tableHeader__buttons">
           <p-button (onClick)="openCreationDialog()" class="p-button-raised p-button-rounded tableHeader__add_button"
                     icon="pi pi-plus" pTooltip="{{ 'general.transportCall.table.create.label' | translate }}"
-                    tooltipPosition="top" type="button"
+                    tooltipPosition="left" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
         </div>
         <div class="tableHeader__buttons">
           <p-button (onClick)="refreshTransportCalls()" class="p-button-raised p-button-rounded"
                     icon="pi pi-refresh" pTooltip="{{ 'general.table.header.refresh' | translate }}"
-                    tooltipPosition="top" type="button"
+                    tooltipPosition="left" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
 
         </div>
