progress indicator added to TC table

--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.scss
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.scss
@@ -31,10 +31,13 @@
 
   }
 
-
 }
 
-
-
-
-
+.dummyContent{
+  width: 98vw;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 16pt;
+  color: $darkGrey;
+  font-family: Tahoma, sans-serif;
+}
