--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -1,4 +1,8 @@
-<p-table styleClass="p-datatable-sm"
+<div *ngIf="progressing" class="dummyContent">
+  <p-progressSpinner *ngIf="progressing"></p-progressSpinner>
+</div>
+<p-table *ngIf="!progressing" 
+        styleClass="p-datatable-sm"
          [value]="transportCalls"
          [(selection)]="selectedtransportCall"
          selectionMode="single"
