--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -6,8 +6,8 @@
     <button type="button" pButton pRipple icon="pi pi-bars" label="Menu" (click)="menu.toggle($event)"></button>
     <p-menu #menu [popup]="true" [model]="helpMenu"></p-menu>
   </div>
-  <div class="p-col-1">
-    <button (click)="onLogout()">Log out</button>
+  <div class="p-col-1 center-button-in-div">
+    <button class="p-button" (click)="onLogout()">Log out</button>
 
   </div>
 
