--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -10,7 +10,8 @@
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
         <span id="portOfCall"
-              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).unLocode}} </span> <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
+              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).unLocode}} </span>
+        <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
       <div class="p-field p-col-12 p-md-4">
         <!-- Placeholder for additional information -->
@@ -35,7 +36,7 @@
   <div class="p-field p-col-12 p-md-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected"
-                [options]="timestampTypes"></p-dropdown>
+                [options]="timestampTypes" (onChange)="showLocationNameOption()"></p-dropdown>
   </div>
 
   <div class="p-field p-col-12 p-md-2"></div>
@@ -62,6 +63,8 @@
     </div>
   </div>
  -->
+
+
   <div class="p-field p-col-12 p-md-5">
     <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
 
@@ -79,9 +82,10 @@
                      placeholder="{{ 'general.timestamp.time' | translate }}"
                      styleClass="datetime-time-time-field"></p-inputMask>
         <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
-        tooltipPosition="top"
-        tooltipStyleClass="ToolTipClass"
-         class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
+                tooltipPosition="top"
+                tooltipStyleClass="ToolTipClass"
+                class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
+                styleClass="p-button-success"
                 (click)="setEventTimestampToNow()"></button>
       </div>
     </div>
@@ -97,7 +101,6 @@
   <div class="p-field p-col-12 p-md-7">
   </div>
 -->
-
   <div class="p-field p-col-12 p-md-4">
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
     <p-dropdown id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
@@ -124,19 +127,23 @@
       </ng-template>
     </p-dropdown>
   </div>
-  
+
   <div class="p-field p-col-12 p-md-2"></div>
 
   <div class="p-field p-col-12 p-md-5">
     <span class="p-float-label">
-    <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"
-    ></textarea>
-    <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
+      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"></textarea>
+      <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
-  <div class="p-field p-col-12 p-md-6">
+  <!-- Location Name -->
+  <div class="p-field p-col-12 p-md-4" [hidden]="!showLocationNameOption()">
+    <label for="locationName">{{ locationNameLabel | translate }}:</label>
+    <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"/>
   </div>
+  <div class="p-field p-col-12 p-md-6"></div>
 </div>
+
 <div class="p-grid">
   <div class="p-col-8">
   </div>
