edit position of berth location name field

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -99,9 +99,12 @@
     <input id="locationID" [(ngModel)]="defaultTimestamp.locationId" pInputText style="width: 100%" type="text"/>
   </div>
   <div class="p-field p-col-12 p-md-7">
-  </div>
--->
+  </div> -->
   <div class="p-field p-col-12 p-md-4">
+    <div class="p-field berth-location-field" [hidden]="!showLocationNameOption()">
+      <label for="locationName">{{ locationNameLabel | translate }}:</label>
+      <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"/>
+    </div>
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
     <p-dropdown id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
                 filterBy="label,value.name" [group]="false">
@@ -137,10 +140,7 @@
     </span>
   </div>
   <!-- Location Name -->
-  <div class="p-field p-col-12 p-md-4" [hidden]="!showLocationNameOption()">
-    <label for="locationName">{{ locationNameLabel | translate }}:</label>
-    <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"/>
-  </div>
+  
   <div class="p-field p-col-12 p-md-6"></div>
 </div>
 
