Work around publisher being null
It is not supposed to be. However, gracefully cope with it as it
happened in practise due to a bug.

Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -119,7 +119,7 @@
   <ng-template pTemplate="body" let-timestamp >
 
     <tr class="unreadTimestamp" [ngClass]="{'obsoleteTimestamp': timestamp.isLatestInCycle == false}">
-      <td pTooltip="Publisher: {{timestamp.publisher.partyName}}
+      <td pTooltip="Publisher: {{timestamp.publisher?.partyName}}
         PublisherRole: {{timestamp.publisherRole}}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" style="width: 3px;"
           [ngStyle]="{'background-color': timestamp.sequenceColor}"></td>
