--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -136,6 +136,18 @@
       <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
+
+  <!-- Vessel Position -->
+  <div class="p-field p-col-12 p-md-4" [hidden]="showVesselPosition()">
+    <label for="vesselPositionLatitude">{{ "latitude" | translate }}:</label>
+    <input id="vesselPositionLatitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%" type="text"/>
+  </div>
+  <div class="p-field p-col-12 p-md-4" [hidden]="showVesselPosition()">
+    <label for="vesselPositionLongtitude">{{ "longtitude" | translate }}:</label>
+    <input id="vesselPositionLongtitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%" type="text"/>
+  </div>
+  <div class="p-field p-col-12 p-md-2"></div>
+
   <!-- Location Name -->
   <div class="p-field p-col-12 p-md-4" [hidden]="!showLocationNameOption()">
     <label for="locationName">{{ locationNameLabel | translate }}:</label>
