if timestamp !isPrimary show FYI in timestamps table
although, it needs revision cause i only think it should show "FYI", if its the most recent timestamp, i dont think its necessary to show on obsolete timestamps???

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -243,6 +243,8 @@
                   pTooltip="{{ 'general.table.accept.tooltip' | translate }} {{timestamp.response}}"
                   tooltipPosition="left"
                   tooltipStyleClass="ToolTipClass" (click)="acceptTimestamp(timestamp)"></p-button>
+
+                  <div *ngIf="!isPrimary(timestamp)">FYI</div>
       </td>
       
     </tr>
