--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -163,11 +163,13 @@
         <div class="rowDetails">{{timestamp.portOfCall?.name}}</div>
       </td>
       <td style="width: 6%"
-          [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
-        <!--   somehow there is a porblem acessing the terminals   -->
-        <div *ngIf="timestamp.facilitySMDGCode!= null">
-          <div pTooltip="{{timestamp.facilitySMDGCode}}" tooltipPosition="top"
-               tooltipStyleClass="ToolTipClass">{{timestamp.facilitySMDGCode}}</div>
+        [ngClass]="'timestampContent'">
+          <div pTooltip="{{timestamp.eventLocation?.facilityCode}}" tooltipPosition="top" tooltipStyleClass="ToolTipClass">
+            {{timestamp.eventLocation?.facilityCode}}</div>
+        
+        <div *ngIf="timestamp.eventLocation?.facilityCode == null && timestamp.facilitySMDGCode != null">
+          <div pTooltip="{{timestamp.facilitySMDGCode}}" tooltipPosition="top" tooltipStyleClass="ToolTipClass">
+            {{timestamp.facilitySMDGCode}}</div>
         </div>
       </td>
     <td *ngIf="isOutGoing(timestamp) && timestamp.eventDeliveryStatus === 'DELIVERY_FINISHED'" pTooltip="{{ 'general.table.header.eventDeliveryStatus.tooltip.grey' | translate }}" tooltipPosition="top"
