--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -92,6 +92,8 @@
         {{ 'general.table.header.terminalId.label' | translate }}
 
       </th>
+      <th style="width: 10%" pTooltip="{{ 'general.table.header.locationName.tooltip' | translate }}"
+      tooltipPosition="top" tooltipStyleClass="ToolTipClass">{{ 'general.table.header.locationName.label' | translate }}</th>
       <th style="width: 8%" pTooltip="{{ 'general.table.header.transportCallStatus.tooltip' | translate }}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" class="timestampContent">{{ 'general.table.header.transportCallStatus.label' | translate }}</th>
       <th style="width: 12%" class="timestampContent" >
@@ -175,6 +177,7 @@
           </div>
         </div>
       </td>
+      <td style="width: 10%">{{ timestamp.eventLocation?.locationName }}</td>
     <td *ngIf="isOutGoing(timestamp) && timestamp.eventDeliveryStatus === 'DELIVERY_FINISHED'" pTooltip="{{ 'general.table.header.eventDeliveryStatus.tooltip.grey' | translate }}" tooltipPosition="top"
     tooltipStyleClass="ToolTipClass" [ngClass]="
       {
