--- a/ui/src/app/view/timestamp-table/timestamp-table.component.scss
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.scss
@@ -63,7 +63,7 @@ tr{
   flex-direction: row;
   float: left;
   padding: 0px 0px !important;
-  max-width: 120px !important;
+  max-width: 160px !important;
 
   &__buttons {
     margin: 5px 10px 0px 0px;  
@@ -73,7 +73,25 @@ tr{
     height: 25px;
     width: 25px;
   }
+}
 
+.gridButtons{
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.dialogueBtn{
+grid-column: 3;
+}
+
+.acceptBtn{
+grid-column: 1;
+grid-row: 1;
+}
+
+.declineBtn{
+grid-column: 2;
+grid-row: 1;
 }
 
 .unreadTimestamp{
