Terminal options & more
- Choose terminal in timestamp in TC creation.
- Hide TerminalOptions when timestamp is of type - XTA-PBP -
- Error added for when Terminal is attempted without choosing port.

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -39,12 +39,14 @@
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected" [options]="timestampTypes"
       (onChange)="showLocationNameOption()"></p-dropdown>
   
-    <div class="p-field p-col-12 p-md-2"></div>
+    <div class="p-field p-col-12 p-md-2" ></div>
 
-    <label for="terminalSelected">{{ 'general.table.header.timestamp.label' | translate }}: </label>
-    <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions">
-    </p-dropdown>
-  </div>
+    <div [hidden]="HideTerminalOption()">
+      <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
+      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions">
+      </p-dropdown>
+    </div>
+    </div>
 
   <div class="p-field p-col-12 p-md-2"></div>
 
