--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -10,7 +10,7 @@
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
         <span id="portOfCall"
-              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).unLocode}} </span>
+              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).unLocationCode}} </span>
         <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
       <div class="p-field p-col-12 p-md-4">
@@ -21,12 +21,22 @@
           : </label>
         <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
       </div>
+      <!--
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="terminal">{{'general.terminal.label'| translate}}: </label>
-        <span *ngIf="defaultTimestamp.facilityCode != null" id="terminal"> {{defaultTimestamp.facilityCode}}</span>
+        <span>{{defaultTimestamp.eventLocation?.facilityCode}}</span>
+      <span *ngIf="defaultTimestamp.eventLocation?.facilityCode == null">
+        <span *ngIf="defaultTimestamp.facilitySMDGCode != null">
+          {{defaultTimestamp.facilitySMDGCode}}
+        </span>
+        <span *ngIf="defaultTimestamp.facilitySMDGCode == null">
+        N/A
+        </span>
+      </span>
       </div>
+    -->
       <div class="p-field p-col-12 p-md-4">
-        <!-- Placeholder for additional information -->
+     <!--    Placeholder for additional information -->
       </div>
     </div>
   </p-card>
