--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -137,15 +137,15 @@
           [ngClass]="'timestampContent'">
         {{ timestamp.timestampType }}
       </td>
-      <td pTooltip ="UTC: {{(timestamp.logOfTimestamp | timestampToTimezone: timestamp.portOfCall: ports)[1]}}"
+      <td pTooltip ="UTC: {{(timestamp.logOfTimestamp | timestampToTimezone: timestamp.portOfCall)[1]}}"
           style="width: 15%"
           [ngClass]="'timestampContent'">
-        {{(timestamp.logOfTimestamp | timestampToTimezone: timestamp.portOfCall: ports)[0]}}
+        {{(timestamp.logOfTimestamp | timestampToTimezone: timestamp.portOfCall)[0]}}
       </td>
-      <td pTooltip ="UTC: {{(timestamp.eventDateTime | timestampToTimezone: timestamp.portOfCall: ports)[1]}}"
+      <td pTooltip ="UTC: {{(timestamp.eventDateTime | timestampToTimezone: timestamp.portOfCall)[1]}}"
           style="width: 15%"
           [ngClass]="'timestampContent'">
-        {{(timestamp.eventDateTime | timestampToTimezone: timestamp.portOfCall: ports)[0]}}
+        {{(timestamp.eventDateTime | timestampToTimezone: timestamp.portOfCall)[0]}}
       </td>
         <!--
       <td
@@ -159,8 +159,8 @@
         [ngClass]="'timestampContent'"
         style="width: 8%">
         <div
-          [ngClass]="'timestampContent'">{{ (timestamp.portOfCall | portIdToPort: ports).unLocode}}</div>
-        <div class="rowDetails">{{timestamp.portOfCall?.name}}</div>
+          [ngClass]="'timestampContent'"> {{timestamp.portOfCall?.unLocationCode}}</div>
+        <div class="rowDetails">{{timestamp.portOfCall?.unLocationName}}</div>
       </td>
       <td style="width: 6%"
         [ngClass]="'timestampContent'">
