--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -57,8 +57,8 @@
       <td>{{transportCall.vesselIMONumber}}</td>
       <td>{{transportCall.UNLocationCode}}</td>
       <td
-      pTooltip ="UTC: {{(transportCall.estimatedDateofArrival | timestampToTimezone: transportCall.portOfCall: ports)[1]}}"
-      >{{(transportCall.estimatedDateofArrival | timestampToTimezone: transportCall.portOfCall: ports)[0]}}</td>
+      pTooltip ="UTC: {{(transportCall.estimatedDateofArrival | timestampToTimezone: transportCall.portOfCall)[1]}}"
+      >{{(transportCall.estimatedDateofArrival | timestampToTimezone: transportCall.portOfCall)[0]}}</td>
       <td>{{transportCall.carrierVoyageNumber}}</td>
       <td>{{transportCall.carrierServiceCode}}</td>
     </tr>
